# crispii_bits

./: Cargo.toml  README.md
src/: add_with_carry.rs  enums.rs  flip.rs  implementations.rs  lib.rs  pos.rs  set.rs  set_bit.rs  traits.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
src/add_with_carry/: add_with_carry_u128.rs  add_with_carry_u16.rs  add_with_carry_u32.rs  add_with_carry_u64.rs  add_with_carry_u8.rs
src/enums/: pos_u16.rs  pos_u64.rs
src/flip/: flip_u128.rs  flip_u16.rs  flip_u32.rs  flip_u64.rs  flip_u8.rs
src/implementations/: u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
src/implementations/u128/: add_with_carry.rs  flip.rs  set.rs
src/implementations/u16/: add_with_carry.rs  flip.rs  set.rs
src/implementations/u32/: add_with_carry.rs  flip.rs  set.rs
src/implementations/u64/: add_with_carry.rs  flip.rs  set.rs
src/implementations/u8/: add_with_carry.rs  flip.rs  set.rs
src/pos/: pos_u128.rs  pos_u16.rs  pos_u32.rs  pos_u64.rs  pos_u8.rs
src/set/: set_u128.rs  set_u16.rs  set_u32.rs  set_u64.rs  set_u8.rs
src/traits/: add_with_carry.rs  flip.rs  set.rs  unsigned_integer.rs
