[package]
name = "crispii_bits"
version = "1.0.0"
edition = "2024"
rust-version = "1.85.0"
description = "Bit related functionality intended for use with Crispii"
readme = "README.md"
repository = "https://github.com/stephen-paton/crispii_bits"
authors = ["Stephen Paton <69050696+stephen-paton@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
keywords = ["crispii", "bits"]

[dependencies]
crispii_digits = { path = "../crispii_digits", version = "0.2.1" }
